# gemini-watermark-removal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: remove_watermark.rs
src/: alpha_maps.rs  blending.rs  detection.rs  engine.rs  error.rs  lib.rs
tests/: integration.rs
